# FEMRI

./: CMakeLists.txt  CMakeOptions.cmake  LICENSE  README  femriConfigure.h.in
Wrapping/Tcl/: MakePackages.tcl
femriCommon/: CMakeLists.txt  femricommon.py  vtkfemri2DBoxKSpaceGenerator.cxx  vtkfemri2DBoxKSpaceGenerator.h  vtkfemri2DCylinderKSpaceGenerator.cxx  vtkfemri2DCylinderKSpaceGenerator.h  vtkfemri3DBoxKSpaceGenerator.cxx  vtkfemri3DBoxKSpaceGenerator.h  vtkfemri3DCylinderKSpaceGenerator.cxx  vtkfemri3DCylinderKSpaceGenerator.h  vtkfemri3DSphereKSpaceGenerator.cxx  vtkfemri3DSphereKSpaceGenerator.h  vtkfemriBoundaryIntegralKSpaceGenerator.cxx  vtkfemriBoundaryIntegralKSpaceGenerator.h  vtkfemriCommonConfigure.h.in  vtkfemriCommonWin32Header.h  vtkfemriKSpaceGenerator.cxx  vtkfemriKSpaceGenerator.h  vtkfemriKSpaceShift.cxx  vtkfemriKSpaceShift.h  vtkfemriKSpaceZeroPadder.cxx  vtkfemriKSpaceZeroPadder.h
femriNumeric/: CMakeLists.txt  femriIntegrationDesignCurve.cxx  femriIntegrationDesignCurve.h  femriIntegrationDesignCurveInterpolator.cxx  femriIntegrationDesignCurveInterpolator.h  femriInterpolatorTest.cxx  femrinumeric.py  vtkSubdivideSelectQuadraticTetra.cxx  vtkSubdivideSelectQuadraticTetra.h  vtkSubdivideSelectTetra.cxx  vtkSubdivideSelectTetra.h  vtkfemriGaussQuadrature.cxx  vtkfemriGaussQuadrature.h  vtkfemriNumericConfigure.h.in  vtkfemriNumericWin32Header.h  vtkfemriOptimalQuadratureOrderCalculator.cxx  vtkfemriOptimalQuadratureOrderCalculator.h  vtkfemriPolyDataExactKSpaceGenerator.cxx  vtkfemriPolyDataExactKSpaceGenerator.h  vtkfemriPolyDataExactKSpaceGeneratorMonolithic.cxx  vtkfemriPolyDataExactKSpaceGeneratorMonolithic.h  vtkfemriPolyDataNumericKSpaceGenerator.cxx  vtkfemriPolyDataNumericKSpaceGenerator.h  vtkfemriUnstructuredGridMRSlicer.cxx  vtkfemriUnstructuredGridMRSlicer.h  vtkfemriUnstructuredGridNumericKSpaceGenerator.cxx  vtkfemriUnstructuredGridNumericKSpaceGenerator.h
femriScripts/: CMakeLists.txt  femri2dboxkspace.py  femri2dcylinderkspace.py  femri3dboxkspace.py  femri3dcylinderkspace.py  femri3dspherekspace.py  femriemptykspace.py  femriimagetokspace.py  femrikspace.py  femrikspacecenter.py  femrikspaceerror.py  femrikspaceshift.py  femrikspacetoimage.py  femrikspacezeropadding.py  femrinumericmeshkspace.py  femrinumericsurfacekspace.py  femriscripts.py  femrisymbolicmeshkspace.py  femrithicknessmeasurement.py
femriSymbolic/: CMakeLists.txt  femriSymbolicApp.cxx  femriSymbolicTesting.cxx  femrisymbolic.py  ginacfemriFourierIntegrators.h  vtkfemriSymbolicConfigure.h.in  vtkfemriSymbolicWin32Header.h  vtkfemriUnstructuredGridFourierIntegrator.cxx  vtkfemriUnstructuredGridFourierIntegrator.h  vtkfemriUnstructuredGridKSpaceGenerator.cxx  vtkfemriUnstructuredGridKSpaceGenerator.h
