CMAKE_MINIMUM_REQUIRED(VERSION 2.0)

PROJECT(FEMRI)

INCLUDE (${FEMRI_SOURCE_DIR}/CMakeOptions.cmake)

OPTION(BUILD_TESTING "Enable build of testing code" OFF)

OPTION(BUILD_FEMRISYMBOLIC "Build femriSymbolic" OFF)

SUBDIRS(
  femriCommon
  femriNumeric
  femriScripts
  )

IF (BUILD_FEMRISYMBOLIC)
  SUBDIRS(femriSymbolic)
ENDIF (BUILD_FEMRISYMBOLIC)

IF(NOT FEMRI_INSTALL_BIN_DIR)
  SET(FEMRI_INSTALL_BIN_DIR ${FEMRI_INSTALL_ROOT}/bin)
ENDIF(NOT FEMRI_INSTALL_BIN_DIR)

IF(NOT FEMRI_INSTALL_INCLUDE_DIR)
  SET(FEMRI_INSTALL_INCLUDE_DIR ${FEMRI_INSTALL_ROOT}/include/femri)
ENDIF(NOT FEMRI_INSTALL_INCLUDE_DIR)

IF(NOT FEMRI_INSTALL_LIB_DIR)
  SET(FEMRI_INSTALL_LIB_DIR ${FEMRI_INSTALL_ROOT}/lib/femri)
ENDIF(NOT FEMRI_INSTALL_LIB_DIR)

INCLUDE_DIRECTORIES (${FEMRI_SOURCE_DIR})
INCLUDE_DIRECTORIES (${FEMRI_SOURCE_DIR}/femriCommon)
INCLUDE_DIRECTORIES (${FEMRI_SOURCE_DIR}/femriSymbolic)
INCLUDE_DIRECTORIES (${FEMRI_SOURCE_DIR}/femriNumeric)
  
INCLUDE_DIRECTORIES (${FEMRI_BINARY_DIR})
INCLUDE_DIRECTORIES (${FEMRI_BINARY_DIR}/femriCommon)
INCLUDE_DIRECTORIES (${FEMRI_BINARY_DIR}/femriSymbolic)
INCLUDE_DIRECTORIES (${FEMRI_BINARY_DIR}/femriNumeric)

